--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body{
   background-color: #282828;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 a{
   list-style: none;
   text-align: none;
@@ -20,8 +24,15 @@ a{
 }
 
 .caixa-header{
-
-background-color: rgb(65, 65, 65);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100px;
+  z-index: 2;
+  width: 100%;
+ position: fixed;
+ background-color: rgb(65, 65, 65);
  
 }
 
@@ -115,11 +126,13 @@ IconContainer {
 .options{
   color: white;
   font-family: 'Times New Roman', Times, serif;
-  font-size: 17px;
+  font-size: 22px;
   font-weight: 600;
   cursor: pointer;
   padding: 6px;
   border-radius: 12px;
+  text-decoration: none;
+  list-style: none;
  
 }
 
@@ -160,29 +173,52 @@ IconContainer {
 }
 
 .Mini-texto{
-  font-size: 16px;
+  font-size: 22px;
+}
+
+.botoes{
+  display: flex;
+  gap: 40px;
+  margin-top: 20px;
+  
 }
 
 .div-button-linkedin{
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  width: 180px;
-  background-color: white;
-  border-radius: 30px ;
-  padding: 8px;
-  cursor:pointer
- 
+  background-color: #ccc;
+  border-radius: 20px;
+  padding: 10px;
+  width: 220px;
 }
 
+.div-button-git{
+  background-color: #ccc;
+  border-radius: 20px;
+  padding: 10px;
+  width: 220px;
+}
 
 .button-linkedin{
-  font-size: 20px;
-  transition: 0.6;
-  color: #414141;
-  text-decoration: none;
-  
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
+
+.button-git{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+
+.botoes a{
+  text-decoration: none;
+  text-decoration: none;
+  list-style: none;
+  color: #282828;
+}
+
 
 
 .div-button-linkedin:hover, .div-button-git:hover, .button-linkedin:hover, .button-git:hover{
@@ -191,28 +227,7 @@ IconContainer {
  color: white;
 }
 
-.div-button-git {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  width: 180px;
-  background-color: white;
-  border-radius: 30px ;
-  padding: 8px;
-  cursor:pointer
-}
 
-.button-git{
-  font-size: 20px;
-  transition: 0.6;
-  color: #414141;
-  text-decoration: none;
-} 
-
-.butoes{
-display: flex;
-gap: 10px;
-}
 
 /*SECTION 2 */ 
 
@@ -238,7 +253,7 @@ gap: 10px;
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  flex-wrap: wrap;
+ 
   height: 100vh;
 }
 
@@ -246,8 +261,8 @@ gap: 10px;
  
  color: rgb(109, 109, 109);
  max-width: 33%;
+ height: 60vh;
  padding: 40px;
-
  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.7);
  border-radius: 15px;
  background: rgba(0, 0, 0, 0.1);
@@ -265,10 +280,14 @@ gap: 10px;
  #about-me{
   display: flex;
   margin-bottom:10px;
-  font-size: 35px;
+  font-size: 50px;
   font: bold;
   color: #5b5858;
   
+ }
+
+ #about-me-text{
+ font-size: 25px;
  }
 
  .content-left p:hover{
@@ -308,7 +327,7 @@ font-style: none;
 text-decoration: none;
 list-style: none;
 color: white;
-font-size: 19px;
+font-size: 25px;
 font: bold;
  
 }
@@ -325,7 +344,6 @@ font: bold;
   color: rgb(109, 109, 109);
  max-width: 33%;
  padding: 40px;
-
  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.7);
  border-radius: 15px;
  background: rgba(0, 0, 0, 0.1);
@@ -352,6 +370,10 @@ font: bold;
   list-style: none;
   list-style: none;
   color: white;
+}
+
+#about-next {
+  font-size: 25px;
 }
 
 
