--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,16 @@
 
 body{
 
-  height: 100vh;
+  
   background-color: #282828;
 }
 
 html{
   scroll-behavior: smooth;
+}
+
+body html{
+min-height: 100%;
 }
 
 a{
@@ -253,7 +257,7 @@ IconContainer {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
- 
+
   height: 100vh;
 }
 
@@ -261,7 +265,7 @@ IconContainer {
  
  color: rgb(109, 109, 109);
  max-width: 33%;
- height: 60vh;
+ 
  padding: 40px;
  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.7);
  border-radius: 15px;
@@ -436,8 +440,8 @@ font: bold;
   align-items: center;
   margin: auto;
   flex-wrap: wrap;
-  z-index: 0;
-  height: 110vh;
+
+  
   
   
 }
@@ -527,11 +531,13 @@ a .img-icon{
 
 
 footer{
-  background-color:#515355;
   display: flex;
   justify-content: center;
-  text-align: center;
   align-items: center;
+  text-align: center ;
+  /*position: relative;
+  bottom: 0;
+  width: 100%;*/
   
 }
 
@@ -561,4 +567,12 @@ footer{
 #section-projetos{
   background-color: white;
   
+}
+
+@media (max-width: 500px){
+  #container-meio {
+    height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
