--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ a{
   padding-top: 140px;
   padding-bottom: 50px;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 120vh;
   
   
 }
@@ -155,6 +155,7 @@ IconContainer {
   justify-content: left;
   align-items: center;
   height: 100vh;
+  margin-top: 100px;
 }
 
 .sobre-mim-img{
@@ -170,7 +171,7 @@ IconContainer {
 .meuNome-text{
   font-family: 'Times New Roman', Times, serif;
   font-weight: 700;
-  font-size: 45px;
+  font-size: 60px;
   padding-left:30px;
   padding: 10px;
   color: #ccc;
@@ -189,15 +190,13 @@ IconContainer {
 
 .div-button-linkedin{
   background-color: #ccc;
-  border-radius: 20px;
-  padding: 10px;
-  width: 220px;
+  border-radius: 50px;
+  padding: 1px;
 }
 
 .div-button-git{
   background-color: #ccc;
-  border-radius: 20px;
-  padding: 10px;
+  border-radius: 50px;
   width: 220px;
 }
 
@@ -206,6 +205,10 @@ IconContainer {
   justify-content: center;
   text-align: center;
   align-items: center;
+  font-size: 45px;
+  padding: 20px;
+  border-radius: 50px;
+  
 }
 
 .button-git{
@@ -213,6 +216,9 @@ IconContainer {
   justify-content: center;
   text-align: center;
   align-items: center;
+  font-size: 45px;
+  padding: 20px;
+  border-radius: 50px;
 }
 
 
@@ -258,7 +264,7 @@ IconContainer {
   align-items: center;
   margin-bottom: 40px;
 
-  height: 100vh;
+  
 }
 
 .content-left{
@@ -570,10 +576,32 @@ footer{
   
 }
 
-@media (max-width: 500px){
-  #container-meio {
-    height: 100vh;
+@media (max-width: 900px){
+  #container-meio {  
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
   }
 }
+
+@media (max-width: 800px){
+  .botoes {
+    display: flex;  
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 500px){
+  .coder {
+  width: 250px;
+  }
+}
+
+
+
+
+
