--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,10 @@ a{
   background-size:cover;
   background-position:center;
   overflow:hidden;
-  padding-top: 140px;
-  padding-bottom: 50px;
+  padding: 200px;
   background-repeat: no-repeat;
+  
+  
   
   
   
@@ -149,18 +150,13 @@ IconContainer {
 }
 
 #sobre-mim-area{
-  margin: auto;
-  max-width: 1000px;
   display: flex;
-  justify-content: left;
-  align-items: center;
-  
-  
-}
-
-.sobre-mim-img{
+  justify-content: center;
+  margin-top: 200px;
  
 }
+
+
 
 .img-1{
   width: 220px;
@@ -595,7 +591,7 @@ footer{
   }
 }
 
-@media (max-width: 500px){
+@media (max-width: 800px){
   .coder {
   width: 250px;
   }
